--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     
 </head>
 <body>
+
+<h1>Try to drag some text from the textarea to another line of the same text-area.</h1>
+
 <textarea rows="30" cols="100">Time is money, money is power, power is pizza, and pizza is knowledge, let’s go!
 -- April
 
@@ -39,5 +42,11 @@
 
   
 </textarea>
+
+
+<video controls="controls">
+  <source src="demo.webm" type="video/webm" />
+</video>
+
 </body>
 </html>
