--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 <body>
 
 <h1>Try to drag some text from the textarea to another line of the same text-area.</h1>
+<p>When this page is viewed in a browser (i.e Google Chrome), everything works fine (see video below).</p>
+<p>When this page is viewed in a WebControl inside a WPF app, the text can't be dragged.</p>
+
 
 <textarea rows="30" cols="100">Time is money, money is power, power is pizza, and pizza is knowledge, let’s go!
 -- April
