--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 <p>When this page is viewed in a browser (i.e Google Chrome), everything works fine (see video below).</p>
 <p>When this page is viewed in a WebControl inside a WPF app, the text can't be dragged.</p>
 
+<br />
+<p>Example repo available at : <a href="https://github.com/MrMitch/awesomium-drag-bug">https://github.com/MrMitch/awesomium-drag-bug</a>.
+
 
 <textarea rows="30" cols="100">Time is money, money is power, power is pizza, and pizza is knowledge, let’s go!
 -- April
@@ -42,10 +45,7 @@
 
   Time is money, money is power, power is pizza, and pizza is knowledge, let’s go!
 -- April
-
-  
 </textarea>
-
 
 <video controls="controls">
   <source src="demo.webm" type="video/webm" />
